@@ -43,7 +43,7 @@
 		<dependency>
 			<groupId>com.github.kilianB</groupId>
 			<artifactId>UtilityCode</artifactId>
-			<version>1.3.1</version>
+			<version>1.4.0</version>
 		</dependency>
 
 		<dependency>
