@@ -23,7 +23,7 @@ class BinaryTreeTest {
 
 	@Test
 	void searchExactItem() {
-		Hash hash = new Hash(new BigInteger("101010100011", 2), 0);
+		Hash hash = createHash("101010100011",0);
 
 		binTree.addHash(hash, 1);
 		PriorityQueue<Result> results = binTree.getElementsWithinHemmingDistance(hash, 100);
@@ -35,8 +35,8 @@ class BinaryTreeTest {
 
 	@Test
 	void searchDistantItem() {
-		Hash hash = new Hash(new BigInteger("101010100011", 2), 0);
-		Hash needle = new Hash(new BigInteger("101010101111", 2), 0);
+		Hash hash = createHash("101010100011", 0);
+		Hash needle = createHash("101010101111", 0);
 
 		binTree.addHash(hash, 1);
 		PriorityQueue<Result> results = binTree.getElementsWithinHemmingDistance(needle, 100);
@@ -48,8 +48,8 @@ class BinaryTreeTest {
 
 	@Test
 	void searchDistantItemFail() {
-		Hash hash = new Hash(new BigInteger("101010100011", 2), 0);
-		Hash needle = new Hash(new BigInteger("101010101111", 2), 0);
+		Hash hash = createHash("101010100011", 0);
+		Hash needle = createHash("101010101111", 0);
 
 		binTree.addHash(hash, 1);
 		PriorityQueue<Result> results = binTree.getElementsWithinHemmingDistance(needle, 1);
@@ -59,8 +59,8 @@ class BinaryTreeTest {
 
 	@Test
 	void searchDistanceExact() {
-		Hash hash = new Hash(new BigInteger("101010100011", 2), 0);
-		Hash needle = new Hash(new BigInteger("101010101111", 2), 0);
+		Hash hash = createHash("101010100011", 0);
+		Hash needle = createHash("101010101111", 0);
 
 		binTree.addHash(hash, 1);
 		PriorityQueue<Result> results = binTree.getElementsWithinHemmingDistance(needle, 2);
@@ -70,7 +70,7 @@ class BinaryTreeTest {
 
 	@Test
 	void searchItemMultipleValues() {
-		Hash hash = new Hash(new BigInteger("101010100011", 2), 0);
+		Hash hash = createHash("101010100011",0);
 
 		binTree.addHash(hash, 1);
 		binTree.addHash(hash, 2);
@@ -83,8 +83,8 @@ class BinaryTreeTest {
 
 	@Test
 	void searchItemMultipleValuesExact() {
-		Hash hash = new Hash(new BigInteger("101010100011", 2), 0);
-		Hash hash1 = new Hash(new BigInteger("101010100010", 2), 0);
+		Hash hash = createHash("101010100011", 0);
+		Hash hash1 = createHash("101010100010", 0);
 
 		binTree.addHash(hash, 1);
 		binTree.addHash(hash, 2);
@@ -100,8 +100,8 @@ class BinaryTreeTest {
 
 	@Test
 	void searchItemMultipleValues2() {
-		Hash hash = new Hash(new BigInteger("101010100011", 2), 0);
-		Hash hash1 = new Hash(new BigInteger("101010100010", 2), 0);
+		Hash hash = createHash("101010100011", 0);
+		Hash hash1 = createHash("101010100010", 0);
 
 		binTree.addHash(hash, 1);
 		binTree.addHash(hash, 2);
@@ -118,8 +118,8 @@ class BinaryTreeTest {
 	@Test
 	void ensureHashConsistencyAdd() {
 
-		Hash hash = new Hash(new BigInteger("101010100011", 2), 250);
-		Hash hash1 = new Hash(new BigInteger("101010100010", 2), 251);
+		Hash hash = createHash("101010100011", 250);
+		Hash hash1 = createHash("101010100010", 251);
 
 		binTree.addHash(hash, 0);
 		assertThrows(IllegalStateException.class, () -> {
@@ -129,8 +129,8 @@ class BinaryTreeTest {
 
 	@Test
 	void ensureHashConsistencySearch() {
-		Hash hash = new Hash(new BigInteger("101010100011", 2), 250);
-		Hash hash1 = new Hash(new BigInteger("101010100010", 2), 251);
+		Hash hash = createHash("101010100011", 250);
+		Hash hash1 = createHash("101010100010", 251);
 
 		binTree.addHash(hash, 0);
 		assertThrows(IllegalStateException.class, () -> {
@@ -143,8 +143,8 @@ class BinaryTreeTest {
 	void addedHashCount() {
 		assertEquals(0,binTree.getHashCount());
 		
-		Hash hash = new Hash(new BigInteger("101010100011", 2), 250);
-		Hash hash1 = new Hash(new BigInteger("101010100010", 2), 250);
+		Hash hash = createHash("101010100011", 250);
+		Hash hash1 = createHash("101010100010", 250);
 
 		binTree.addHash(hash, 0);
 		assertEquals(1,binTree.getHashCount());
@@ -154,5 +154,16 @@ class BinaryTreeTest {
 		//Adding the same hash will increase the hash count
 		binTree.addHash(hash, 0);
 		assertEquals(3,binTree.getHashCount());
+	}
+	
+	
+	/**
+	 * Create a dummy hash 
+	 * @param bits
+	 * @param algoId
+	 * @return
+	 */
+	private static Hash createHash(String bits, int algoId) {
+		return new Hash(new BigInteger(bits,2),bits.length(),algoId);
 	}
 }
