@@ -15,9 +15,9 @@ class HashTest {
 	@Test 
 	void incompatibleAlgorithms() {
 		int algoId = new AverageHash(14).algorithmId();
-		int algoId1 = new AverageHash(15).algorithmId();
-		Hash hash0 = new Hash(BigInteger.ONE,algoId);
-		Hash hash1 = new Hash(BigInteger.ONE,algoId1);
+		int algoId1 = new AverageHash(500).algorithmId();
+		Hash hash0 = new Hash(BigInteger.ONE,1,algoId);
+		Hash hash1 = new Hash(BigInteger.ONE,1,algoId1);
 		assertThrows(IllegalArgumentException.class,()->{hash0.hammingDistance(hash1);});
 	}
 	
@@ -27,14 +27,14 @@ class HashTest {
 		
 		@Test
 		void sameObject() {
-			Hash hash0 = new Hash(new BigInteger("010101000",2),0);
+			Hash hash0 = new Hash(new BigInteger("010101000",2),0,0);
 			assertEquals(hash0,hash0);
 		}
 		
 		@Test
 		void equalContent() {
-			Hash hash0 = new Hash(new BigInteger("1010101000",2),0);
-			Hash hash1 = new Hash(new BigInteger("1010101000",2),0);
+			Hash hash0 = new Hash(new BigInteger("1010101000",2),0,0);
+			Hash hash1 = new Hash(new BigInteger("1010101000",2),0,0);
 			assertEquals(hash0,hash1);
 		}
 		
@@ -46,14 +46,16 @@ class HashTest {
 		@Test
 		@DisplayName("Identical Hash")
 		void identical(){
-			Hash hash0 = new Hash(new BigInteger("10101010",2),0);
+			String bits = "10101010";
+			Hash hash0 = new Hash(new BigInteger(bits,2),bits.length(),0);
 			assertEquals(0,hash0.hammingDistance(hash0));
 		}
 		
 		@Test
 		@DisplayName("Identical Hash Fast")
 		void identicalFast(){
-			Hash hash0 = new Hash(new BigInteger("10101010",2),0);
+			String bits = "10101010";
+			Hash hash0 = new Hash(new BigInteger(bits,2),bits.length(),0);
 			assertEquals(0,hash0.hammingDistanceFast(hash0));
 		}
 		
@@ -61,16 +63,20 @@ class HashTest {
 		@Test
 		@DisplayName("Difference Padded")
 		void distanceThree(){
-			Hash hash0 = new Hash(new BigInteger("10001100",2),0);
-			Hash hash1 = new Hash(new BigInteger("11111100",2),0);
+			String bits = "10001100";
+			String bits1 = "11111100";
+			Hash hash0 = new Hash(new BigInteger(bits,2),bits.length(),0);
+			Hash hash1 = new Hash(new BigInteger(bits1,2),bits1.length(),0);
 			assertEquals(3,hash0.hammingDistance(hash1));
 		}
 		
 		@Test
 		@DisplayName("Difference Padded Fast")
 		void distanceThreeFast(){
-			Hash hash0 = new Hash(new BigInteger("10001100",2),0);
-			Hash hash1 = new Hash(new BigInteger("11111100",2),0);
+			String bits = "10001100";
+			String bits1 = "11111100";
+			Hash hash0 = new Hash(new BigInteger(bits,2),bits.length(),0);
+			Hash hash1 = new Hash(new BigInteger(bits1,2),bits1.length(),0);
 			assertEquals(3,hash0.hammingDistanceFast(hash1));
 		}	
 		
@@ -81,31 +87,48 @@ class HashTest {
 		@Test
 		@DisplayName("Identical Hash")
 		void identical(){
-			Hash hash0 = new Hash(new BigInteger("10101010",2),0);
+			String bits = "10101010";
+			Hash hash0 = new Hash(new BigInteger(bits,2),bits.length(),0);
 			assertEquals(0,hash0.normalizedHammingDistance(hash0));
 		}
 		
 		@Test
 		@DisplayName("Identical Hash Fast")
 		void identicalFast(){
-			Hash hash0 = new Hash(new BigInteger("10101010",2),0);
+			String bits = "10101010";
+			Hash hash0 = new Hash(new BigInteger(bits,2),bits.length(),0);
 			assertEquals(0,hash0.normalizedHammingDistanceFast(hash0));
 		}
 		
 		@Test
 		@DisplayName("Difference Padded")
 		void dstanceThree(){
-			Hash hash0 = new Hash(new BigInteger("10001100",2),0);
-			Hash hash1 = new Hash(new BigInteger("11111100",2),0);
-			assertEquals(3/7d,hash0.normalizedHammingDistance(hash1));
+			String bits =  "10001100";
+			String bits1 = "11111100";
+			Hash hash0 = new Hash(new BigInteger(bits,2),bits.length(),0);
+			Hash hash1 = new Hash(new BigInteger(bits1,2),bits1.length(),0);
+			assertEquals(3/8d,hash0.normalizedHammingDistance(hash1));
 		}
 		
 		@Test
 		@DisplayName("Difference Padded Fast")
 		void distanceThreeFast(){
-			Hash hash0 = new Hash(new BigInteger("10001100",2),0);
-			Hash hash1 = new Hash(new BigInteger("11111100",2),0);
-			assertEquals(3/7d,hash0.normalizedHammingDistanceFast(hash1));
+			String bits =  "10001100";
+			String bits1 = "11111100";
+			Hash hash0 = new Hash(new BigInteger(bits,2),bits.length(),0);
+			Hash hash1 = new Hash(new BigInteger(bits1,2),bits1.length(),0);
+			assertEquals(3/8d,hash0.normalizedHammingDistanceFast(hash1));
 		}
+		
+		@Test
+		@DisplayName("Difference Leading zero")
+		void dstanceThreeLeading(){
+			String bits =  "01001100";
+			String bits1 = "11111100";
+			Hash hash0 = new Hash(new BigInteger(bits,2),bits.length(),0);
+			Hash hash1 = new Hash(new BigInteger(bits1,2),bits1.length(),0);
+			assertEquals(3/8d,hash0.normalizedHammingDistance(hash1));
+		}
+		
 	}
 }
